@@ -66,7 +66,9 @@ Build-Depends: cdbs,
 	binutils-gold,
 	libavcodec-dev (>= 4:0.7),
 	libavformat-dev (>= 4:0.7),
-	libavutil-dev (>= 4:0.7)
+	libavutil-dev (>= 4:0.7),
+	libflac-dev,
+	libwebp-dev
 Standards-Version: 3.9.0
 
 Package: chromium-browser
