@@ -296,11 +296,14 @@ GYP_DEFINES += \
 	use_system_libxslt=1 \
 	use_system_zlib=1 \
 	use_system_libevent=1 \
-	use_system_icu=0 \
+	use_system_icu=1 \
 	use_system_yasm=1 \
 	use_system_ffmpeg=$(USE_SYSTEM_FFMPEG) \
-	use_system_vpx=0 \
+	use_system_vpx=1 \
 	use_system_xdg_utils=1 \
+	use_system_flac=1 \
+	use_system_libwebp=1 \
+	use_system_speex=1 \
 	$(NULL)
 endif
 
