@@ -5,8 +5,9 @@ chromium-browser (13.0.782.56~r92025-1) UNRELEASED; urgency=low
   * Refreshed patches
   * Use system ffmpeg libs
   * Switch to git
+  * Use system icu, vpx, flac, webp, speex libs
 
- -- Giuseppe Iuculano <iuculano@debian.org>  Mon, 18 Jul 2011 15:17:47 +0200
+ -- Giuseppe Iuculano <iuculano@debian.org>  Mon, 18 Jul 2011 16:13:11 +0200
 
 chromium-browser (12.0.742.112~r90304-1) unstable; urgency=high
 
